TODO: Update and filter logs.
TODO: Fix potential or existing bugs in this file.

---VBA-rr V21+(interim)---
08-18-2009 aquanull - Fixed GDI/D3D/OpenGL display with 3x filters.
08-18-2009 aquanull - Added Simple 3x and Simple 4x filters (unoptimized).
08-05-2009 aquanull - Fixed a bug that certain accelerator keys would not be enabled correctly.
08-05-2009 aquanull - Fixed an assertion failure in the old cheat search dialog.
08-05-2009 aquanull - Fixed several activation problems of the main window and dialogs.
07-30-2009 aquanull - Fixed an old bug that would crash the emulator if the user paused it with the throttle set to 25% or less and without a ROM loaded.
07-30-2009 aquanull - Fixed menu item File->Pause. It now updates correctly.
07-29-2009 aquanull - Fixed display of timestamps of Save Slots. It can be enabled via File->Current Slot->Display Timestamps.
07-29-2009 aquanull - Now the emulator will never write to the Windows Registry anymore.
07-28-2009 aquanull - Fixed an old bug that caused the emulator to freeze.
07-28-2009 aquanull - Added an option to make the emulator prefer the old-fashion save/movie/etc. file naming to the new-fashion.
07-28-2009 aquanull - Removed the last Win32 Registry junks.
07-22-2009 aquanull - Added a missing header file.
07-22-2009 aquanull - Fixed various out-of-range errors within some file dialogs.
07-22-2009 aquanull - Removed some redundant functions.
07-01-2009 adelikat - Hooked up RamWatch AskSave() function to VBA exit
07-01-2009 adelikat - Ramwatch - Hooked up Ramwatch recent files, save window position flag, save window position
06-30-2009 adelikat - Ramwatch - Hooked up Ramwatch autoload
06-29-2009 nitsuja - enabled directory override edit boxes
06-28-2009 nitsuja - added RAM search and RAM watch (from Gens)
06-28-2009 nitsuja - fixed GB memory viewer crash
06-28-2009 nitsuja - fixed read-only toggle to refuse toggling when the movie file is not writable