@@ -755,6 +755,8 @@
 #define ID_OPTIONS_VIDEO_FULLSCREEN800X600 40164
 #define ID_OPTIONS_FILTER16BIT_SIMPLE3X 40165
 #define ID_OPTIONS_FILTER16BIT_SIMPLE4X 40166
+#define ID_OPTIONS_FILTER16BIT_PIXELATEEXPERIMENTAL3X 40167
+#define ID_OPTIONS_FILTER16BIT_PIXELATEEXPERIMENTAL4X 40168
 #define ID_OPTIONS_EMULATOR_SAVETYPE_AUTOMATIC 40169
 #define ID_OPTIONS_EMULATOR_SAVETYPE_EEPROM 40170
 #define ID_OPTIONS_EMULATOR_SAVETYPE_SRAM 40171
